--- a/rnotify.service
+++ b/rnotify.service
@@ -5,4 +5,5 @@ StartLimitIntervalSec=0
 [Service]
 Type=simple
 Restart=always
+RestartSec=0
 ExecStart=/bin/sh -c "notify-send \"Remote notification\" \"$(nc -l 127.0.0.1 1337)\""
